fix(min width): edite shifts size

--- a/src/layouts/components/Editor/styles.scss
+++ b/src/layouts/components/Editor/styles.scss
@@ -65,16 +65,6 @@
     padding: 0 1rem;
   }
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin-top: 3.75rem; // taken from .content in blueprint.scss
-    margin-bottom: 0.75rem; // taken from .content in blueprint.scss
-  }
-
   code {
     background-color: rgba(#616161, 0.1);
     color: #616161;
